--- a/reportstary.css
+++ b/reportstary.css
@@ -11,7 +11,7 @@
 
 *,
 *::before,
-*::after { 
+*::after {
   box-sizing: border-box;
 }
 
@@ -81,10 +81,10 @@ button {
   border: none;
 }
 
-.container {
+/* .container {
   width: 100%;
   margin: 3.125rem auto;
-}
+} */
 
 @media (min-width: 576px) {
   .container {
@@ -105,7 +105,7 @@ button {
 }
 
 .info #title {
-  font-weight: 600 ;
+  font-weight: 600;
 }
 
 .info #description {
@@ -132,13 +132,15 @@ form {
     padding: 2.5rem;
     width: max-content;
   }
-} 
+}
 
 .form-group {
-  padding: 0.25rem;
+  padding: 0.625rem 0;
+  display: flex;
 }
 
 .form-control {
+  text-shadow: #000000 0 0 0.025rem;
   display: block;
   width: 100%;
   height: 2.375rem;
@@ -177,7 +179,7 @@ form {
   display: block;
   width: 100%;
   padding: 0.75rem;
-   background: var(--color-green);
+  background: var(--color-green);
   color: inherit;
   border-radius: 0.25rem;
   cursor: pointer;
