add styles to fixed the scroll to feature in the page while scrolling

--- a/style.css
+++ b/style.css
@@ -61,6 +61,15 @@
     color: black;
     margin-right: 5px;
   }
+/* back to top button */
+#bttbutton{
+  position: fixed;
+    bottom: 20px;
+    left: 50px;
+    z-index: 9999;
+    border: none;
+    outline: none;
+}
 
   /*-------sos button ---------*/
   #mySBtn {
