--- a/style.css
+++ b/style.css
@@ -129,19 +129,21 @@
   /* Button styles */
   margin-top: 1rem;
   display: inline-block;
-  padding:.8rem 3rem;
+  padding: .8rem 3rem;
   font-size: 1.7rem;
   border-radius: .5rem;
-  border:.2rem solid black;
-  color:#ffc82c;
+  border: .2rem solid black;
+  color: #ffc82c;
   cursor: pointer;
   background: #ffc82c;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .hover-button:hover {
   /* Hover styles */
-  background: #ffc82c ;
-  color:#fff;
+  background: #ffc82c;
+  color: #fff;
 }
+
 /*-----end of sos button----*/
 
