--- a/style.css
+++ b/style.css
@@ -62,25 +62,25 @@
     margin-right: 5px;
   }
 
-/* back to top button */
-#bttbutton {
-  position: fixed;
-  bottom: 20px;
-  left: 40px;
-  z-index: 9999;
-  border: none;
-  outline: none;
-  width: 55px;
-  transition: all 0.5s ease;
-}
+  /* back to top button */
+  #bttbutton {
+    position: fixed;
+    bottom: 20px;
+    left: 40px;
+    z-index: 9999;
+    border: none;
+    outline: none;
+    width: 55px;
+    transition: all 0.5s ease;
+  }
 
-.hover-effect img {
-  transition: opacity 0.3s ease;
-}
+  .hover-effect img {
+    transition: opacity 0.3s ease;
+  }
 
-.hover-effect img:hover {
-  opacity: 0.75;
-}
+  .hover-effect img:hover {
+    opacity: 0.75;
+  }
 
   /*-------sos button ---------*/
   #mySBtn {
@@ -139,10 +139,10 @@
   /* Button styles */
   margin-top: 1rem;
   display: inline-block;
-  padding: .8rem 3rem;
+  padding: 0.8rem 3rem;
   font-size: 1.7rem;
-  border-radius: .5rem;
-  border: .2rem solid rgb(99, 99, 99);
+  border-radius: 0.5rem;
+  border: 0.2rem solid rgb(99, 99, 99);
   color: #fff;
   cursor: pointer;
   background: #ffc82c;
@@ -198,14 +198,21 @@
   animation: scroll 0.5s ease-in-out both;
 }
 
-
 /*-----end of sos button----*/
 /* copy right  */
-  #copyright{
-    text-align: center;
-    padding: 2px 2px 2px 2px;
-    background-color: black;
-    color: white;
-  }
+#copyright {
+  text-align: center;
+  padding: 2px 2px 2px 2px;
+  background-color: black;
+  color: white;
+}
 
-
+/* preloader */
+#preloader {
+  background: #fff url(Assets/Images/preloaderdog.gif) no-repeat center center;
+  background-size: 60%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
