--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@
   font-size: 1.7rem;
   border-radius: .5rem;
   border: .2rem solid rgb(99, 99, 99);
-  color: #fff;
+  color: #181717;
   cursor: pointer;
   background: #ffc82c;
   transition: background-color 0.3s ease, color 0.3s ease;
