--- a/reportstary.css
+++ b/reportstary.css
@@ -44,6 +44,38 @@ body::before {
   background-position: center;
 }
 
+.form-group {
+  display: flex;
+  flex-direction: column; /* Change to column layout for labels and form controls */
+  margin-bottom: 1rem;
+}
+
+.form-group label {
+  margin-bottom: 0.25rem;
+  font-size: 1.125rem;
+}
+
+.form-control {
+  width: 100%;
+  height: 2.375rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+}
+
+.input-radio,
+.input-checkbox {
+  margin-right: 0.625rem;
+  min-height: auto;
+  min-width: auto;
+}
+
+.input-textarea {
+  min-height: 120px;
+  padding: 0.625rem;
+  resize: vertical;
+  border-radius: 0.25rem;
+}
+
 #title {
   font-weight: 500;
   line-height: 1.1;
@@ -185,7 +217,7 @@ form {
   cursor: pointer;
 }
 
-/* 
+/*
 nav {
   margin-top: 1vh;
   font-weight: bold;
