--- a/output.css
+++ b/output.css
@@ -1201,6 +1201,13 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.space-y-4 input{
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.space-y-4 textarea{
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
