--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@
   font-size: 1.5rem;
   border-radius: 0.5rem;
   border: 0.1rem solid rgb(68,38,0);
-  color: #fff;
+  color: #fff !important;
   cursor: pointer;
   background: #895a21 !important;
   transition: background-color 0.3s ease, color 0.3s ease;
@@ -168,7 +168,7 @@
 .hover-button:hover {
   /* Hover styles */
   background: #ffbb00 !important;
-  color: #000000;
+  color: #fff;
 }
 
 @keyframes fade-in-right {
