Fixed Scroll To Top and Footer Text

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@
   #bttbutton {
     position: fixed;
     bottom: 20px;
-    left: 40px;
+    right: 40px;
     z-index: 9999;
     border: none;
     outline: none;
