Fixed Google Translate Searchbar

--- a/navbar.css
+++ b/navbar.css
@@ -143,7 +143,8 @@
 }
 
 .goog-te-gadget {
-  font-size:0px;
+  font-size:0px !important;
+  margin-bottom: -27px;
 }
 
 .skiptranslate goog-te-gadget #text{
