Fixed button size glitch in light and dark theme

--- a/navbar.css
+++ b/navbar.css
@@ -8,30 +8,29 @@
   color: rgb(51 50 49 / var(--tw-bg-opacity));
 }
 
-.turn-red-hover:hover {
+#switch{
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: color .3s;
+}
+
+#switch.light-theme {
+  color: white;
+}
+
+#switch.dark-theme {
+  color: rgb(62, 62, 62);;
+}
+
+
+#switch.turn-red-hover:hover {
   --tw-text-opacity: 0.65;
   color: rgb(255 0 0 / var(--tw-text-opacity));
-  transition-duration: 0.3s;
 }
 
-.turn-yellow-hover:hover {
+#switch.turn-yellow-hover:hover {
   --tw-text-opacity: 0.65;
   color: rgb(255 177 0 / var(--tw-text-opacity));
-  transition-duration: 0.3s;
-}
-
-.light-theme {
-  font-size: 1.5rem;
-  color: white;
-  cursor: pointer;
-  transition: color .3s;
-}
-
-.dark-theme {
-  font-size: 1.5rem;
-  color: rgb(62, 62, 62);;
-  cursor: pointer;
-  transition: color .3s;
 }
 
 .bg-header-orange-light {
